# demon_receipt_box

./: .gitignore  README.md  demon_talk.py  llm_postprocess.py  main.py  print_docx.py  print_me.txt  print_random_docx_gdi.py  print_random_image.py  print_random_image_gdi.py  print_receipt.py  pyproject.toml  voice_receipt.py
printables/: fortune.txt  header_always_print.txt  hello.txt  random_text_lines.txt  receipt-header.docx  slopyanus.txt
prompts/: joke_prompt.txt
